@@ -4,28 +4,29 @@
  * Allows to open various content as modal,
  * centered and animated box.
  *
- * Dependencies: MooTools 1.2
+ * Dependencies: MooTools 1.2 or newer
  *
  * Inspired by
  *  ... Lokesh Dhakar	- The original Lightbox v2
  *
- * @version		1.1 rc4
+ * @version		1.2
  *
  * @license		MIT-style license
  * @author		Harald Kirschner <mail [at] digitarald.de>
+ * @author		Rouven Weßling <me [at] rouvenwessling.de>
  * @copyright	Author
  */
 
 var SqueezeBox = {
 
 	presets: {
-		onOpen: $empty,
-		onClose: $empty,
-		onUpdate: $empty,
-		onResize: $empty,
-		onMove: $empty,
-		onShow: $empty,
-		onHide: $empty,
+		onOpen: function(){},
+		onClose: function(){},
+		onUpdate: function(){},
+		onResize: function(){},
+		onMove: function(){},
+		onShow: function(){},
+		onHide: function(){},
 		size: {x: 600, y: 450},
 		sizeLoading: {x: 200, y: 150},
 		marginInner: {x: 20, y: 20},
@@ -51,7 +52,7 @@ var SqueezeBox = {
 	initialize: function(presets) {
 		if (this.options) return this;
 
-		this.presets = $merge(this.presets, presets);
+		this.presets = Object.merge(this.presets, presets);
 		this.doc = this.presets.document || document;
 		this.options = {};
 		this.setOptions(this.presets).build();
@@ -75,9 +76,13 @@ var SqueezeBox = {
 			styles: {display: 'none', zIndex: this.options.zIndex + 2}
 		});
 		if (this.options.shadow) {
-			if (Browser.Engine.webkit420) {
-				this.win.setStyle('-webkit-box-shadow', '0 0 10px rgba(0, 0, 0, 0.7)');
-			} else if (!Browser.Engine.trident4) {
+			if (Browser.chrome
+			|| (Browser.safari && Browser.version >= 3)
+			|| (Browser.opera && Browser.version >= 10.5)
+			|| (Browser.firefox && Browser.version >= 3.5)
+			|| (Browser.ie && Browser.version >= 9)) {
+				this.win.addClass('shadow');
+			} else if (!Browser.ie6) {
 				var shadow = new Element('div', {'class': 'sbox-bg-wrap'}).inject(this.win);
 				var relay = function(e) {
 					this.overlay.fireEvent('click', [e]);
@@ -90,13 +95,13 @@ var SqueezeBox = {
 		this.content = new Element('div', {id: 'sbox-content'}).inject(this.win);
 		this.closeBtn = new Element('a', {id: 'sbox-btn-close', href: '#'}).inject(this.win);
 		this.fx = {
-			overlay: new Fx.Tween(this.overlay, $merge({
+			overlay: new Fx.Tween(this.overlay, Object.merge({
 				property: 'opacity',
 				onStart: Events.prototype.clearChain,
 				duration: 250,
 				link: 'cancel'
 			}, this.options.overlayFx)).set(0),
-			win: new Fx.Morph(this.win, $merge({
+			win: new Fx.Morph(this.win, Object.merge({
 				onStart: Events.prototype.clearChain,
 				unit: 'px',
 				duration: 750,
@@ -104,28 +109,28 @@ var SqueezeBox = {
 				link: 'cancel',
 				unit: 'px'
 			}, this.options.resizeFx)),
-			content: new Fx.Tween(this.content, $merge({
+			content: new Fx.Tween(this.content, Object.merge({
 				property: 'opacity',
 				duration: 250,
 				link: 'cancel'
 			}, this.options.contentFx)).set(0)
 		};
-		$(this.doc.body).adopt(this.overlay, this.win);
+		document.id(this.doc.body).adopt(this.overlay, this.win);
 	},
 
 	assign: function(to, options) {
-		return ($(to) || $$(to)).addEvent('click', function() {
+		return (document.id(to) || $$(to)).addEvent('click', function() {
 			return !SqueezeBox.fromElement(this, options);
 		});
 	},
-
+	
 	open: function(subject, options) {
 		this.initialize();
 
 		if (this.element != null) this.trash();
-		this.element = $(subject) || false;
+		this.element = document.id(subject) || false;
 
-		this.setOptions($merge(this.presets, options || {}));
+		this.setOptions(Object.merge(this.presets, options || {}));
 
 		if (this.element && this.options.parse) {
 			var obj = this.element.getProperty(this.options.parse);
@@ -147,21 +152,21 @@ var SqueezeBox = {
 			return false;
 		}, this);
 	},
-
+	
 	fromElement: function(from, options) {
 		return this.open(from, options);
 	},
 
 	assignOptions: function() {
-		this.overlay.set('class', this.options.classOverlay);
-		this.win.set('class', this.options.classWindow);
-		if (Browser.Engine.trident4) this.win.addClass('sbox-window-ie6');
+		this.overlay.addClass(this.options.classOverlay);
+		this.win.addClass(this.options.classWindow);
+		if (Browser.ie6) this.win.addClass('sbox-window-ie6');
 	},
 
 	close: function(e) {
-		var stoppable = ($type(e) == 'event');
+		var stoppable = (typeOf(e) == 'event');
 		if (stoppable) e.stop();
-		if (!this.isOpen || (stoppable && !$lambda(this.options.closable).call(this, e))) return this;
+		if (!this.isOpen || (stoppable && !Function.from(this.options.closable).call(this, e))) return this;
 		this.fx.overlay.start(0).chain(this.toggleOverlay.bind(this));
 		this.win.setStyle('display', 'none');
 		this.fireEvent('onClose', [this.content]);
@@ -195,7 +200,7 @@ var SqueezeBox = {
 
 	applyContent: function(content, size) {
 		if (!this.isOpen && !this.applyTimer) return;
-		this.applyTimer = $clear(this.applyTimer);
+		this.applyTimer = clearTimeout(this.applyTimer);
 		this.hideContent();
 		if (!content) {
 			this.toggleLoading(true);
@@ -204,8 +209,11 @@ var SqueezeBox = {
 			this.fireEvent('onUpdate', [this.content], 20);
 		}
 		if (content) {
-			if (['string', 'array'].contains($type(content))) this.content.set('html', content);
-			else if (!this.content.hasChild(content)) this.content.adopt(content);
+			if (['string', 'array'].contains(typeOf(content))) {
+				this.content.set('html', content);
+			} else if (!(content !== this.content && this.content.contains(content))) {
+				this.content.adopt(content);
+			}
 		}
 		this.callChain();
 		if (!this.isOpen) {
@@ -219,11 +227,11 @@ var SqueezeBox = {
 	},
 
 	resize: function(size, instantly) {
-		this.showTimer = $clear(this.showTimer || null);
+		this.showTimer = clearTimeout(this.showTimer || null);
 		var box = this.doc.getSize(), scroll = this.doc.getScroll();
-		this.size = $merge((this.isLoading) ? this.options.sizeLoading : this.options.size, size);
+		this.size = Object.merge((this.isLoading) ? this.options.sizeLoading : this.options.size, size);
 		var parentSize = self.getSize();
-		if(this.size.x == parentSize.x){
+		if (this.size.x == parentSize.x) {
 			this.size.y = this.size.y - 50;
 			this.size.x = this.size.x - 20;
 		}
@@ -286,14 +294,14 @@ var SqueezeBox = {
 	},
 
 	checkTarget: function(e) {
-		return this.content.hasChild(e.target);
+		return e.target !== this.content && this.content.contains(e.target);
 	},
 
 	reposition: function() {
 		var size = this.doc.getSize(), scroll = this.doc.getScroll(), ssize = this.doc.getScrollSize();
 		var over = this.overlay.getStyles('height');
-		var j =parseInt(over.height);
-		if( ssize.y > j && size.y >= j){
+		var j = parseInt(over.height);
+		if (ssize.y > j && size.y >= j) {
 			this.overlay.setStyles({
 				width: ssize.x + 'px',
 				height: ssize.y + 'px'
@@ -301,7 +309,6 @@ var SqueezeBox = {
 			this.win.setStyles({
 				left: (scroll.x + (size.x - this.win.offsetWidth) / 2 - this.scrollOffset).toInt() + 'px',
 				top: (scroll.y + (size.y - this.win.offsetHeight) / 2).toInt() + 'px'
-
 			});
 		}
 		return this.fireEvent('onMove', [this.overlay, this.win]);
@@ -315,16 +322,15 @@ var SqueezeBox = {
 	},
 
 	extend: function(properties) {
-		return $extend(this, properties);
+		return Object.append(this, properties);
 	},
 
 	handlers: new Hash(),
 
 	parsers: new Hash()
-
 };
 
-SqueezeBox.extend(new Events($empty)).extend(new Options($empty)).extend(new Chain($empty));
+SqueezeBox.extend(new Events(function(){})).extend(new Options(function(){})).extend(new Chain(function(){}));
 
 SqueezeBox.parsers.extend({
 
@@ -333,10 +339,10 @@ SqueezeBox.parsers.extend({
 	},
 
 	clone: function(preset) {
-		if ($(this.options.target)) return $(this.options.target);
+		if (document.id(this.options.target)) return document.id(this.options.target);
 		if (this.element && !this.element.parentNode) return this.element;
 		var bits = this.url.match(/#([\w-]+)$/);
-		return (bits) ? $(bits[1]) : (preset ? this.element : false);
+		return (bits) ? document.id(bits[1]) : (preset ? this.element : false);
 	},
 
 	ajax: function(preset) {
@@ -378,7 +384,7 @@ SqueezeBox.handlers.extend({
 			}
 			size.x = size.x.toInt();
 			size.y = size.y.toInt();
-			this.asset = $(tmp);
+			this.asset = document.id(tmp);
 			tmp = null;
 			this.asset.width = size.x;
 			this.asset.height = size.y;
@@ -401,13 +407,13 @@ SqueezeBox.handlers.extend({
 
 	ajax: function(url) {
 		var options = this.options.ajaxOptions || {};
-		this.asset = new Request.HTML($merge({
+		this.asset = new Request.HTML(Object.merge({
 			method: 'get',
 			evalScripts: false
 		}, this.options.ajaxOptions)).addEvents({
 			onSuccess: function(resp) {
 				this.applyContent(resp);
-				if (options.evalScripts !== null && !options.evalScripts) $exec(this.asset.response.javascript);
+				if (options.evalScripts !== null && !options.evalScripts) Browser.exec(this.asset.response.javascript);
 				this.fireEvent('onAjax', [resp, this.asset]);
 				this.asset = null;
 			}.bind(this),
@@ -417,7 +423,7 @@ SqueezeBox.handlers.extend({
 	},
 
 	iframe: function(url) {
-		this.asset = new Element('iframe', $merge({
+		this.asset = new Element('iframe', Object.merge({
 			src: url,
 			frameBorder: 0,
 			width: this.options.size.x,
@@ -436,7 +442,6 @@ SqueezeBox.handlers.extend({
 	string: function(str) {
 		return str;
 	}
-
 });
 
 SqueezeBox.handlers.url = SqueezeBox.handlers.ajax;
