@@ -34,6 +34,7 @@ $ -> Language fix or change
  # [#25938] Repetition code in JHTMLImage::site()
  # [#25974] weblinks component
  # [#26067] Wrong colspan in admin/mod_latest when there are no results
+ # [#26083] Update SqueezeBox to version 1.2
 
 08-Jun-2011 Christophe Demko
  # [#26062] gray bars in Firefox/Safari above and under the Submenue in adminlists (Rouven Weßling)
